cleaned up legacy code and reformatted.